# fastapi_glpi

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: database.py  main.py
app/glpi_manager/: forms.py  models.py
app/static/: styles.css
app/static/templates/: base.html  index.html  layout.html  new_organization.html  new_ticket.html
app/utils/: glpi.py  telegram_bot_manager.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 13421738326c_.py  564ef857f2c8_init.py  a614302177bf_init.py
